...
            configure(action: read, with: descriptor, displayMode: actionDisplayMode)
            
            return [read]
        } else {
            let flag = SwipeAction(style: .default, title: nil, handler: nil)
            flag.hidesWhenSelected = true
            flag.accessibilityLabel = "Accessible Button"
            configure(action: flag, with: .flag, displayMode: actionDisplayMode)
            
            let delete = SwipeAction(style: .destructive, title: nil) { action, indexPath in
                self.emails.remove(at: indexPath.row)
            }
            configure(action: delete, with: .trash, displayMode: actionDisplayMode)
...
